<resources>
    <string name="app_name">UdacityProject3</string>
    <string name="download_completed">Download compeleted</string>
    <string name="notification_action_check_status">Check the status</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="download_using_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="download_using_loadapp">LoadApp - Current repository by Udacity</string>
    <string name="download_using_refrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="app_description">Download files from Internet</string>
    <string name="select_option_to_download">Please select an option to download</string>
    <string name="file_name">File Name</string>
    <string name="download_status">Download Status</string>
    <string name="ok">Ok</string>
    <string name="download_status_content_description">Download status</string>

</resources>