<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/container_main_scene"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/bannerIV"
            android:layout_width="0dp"
            android:layout_height="196dp"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_download_archive" />

        <RadioGroup
            android:id="@+id/download_option_radio_group"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toTopOf="@+id/progressBtn"
            app:layout_constraintEnd_toEndOf="@+id/endGuideline"
            app:layout_constraintStart_toStartOf="@+id/startGuideLine"
            app:layout_constraintTop_toBottomOf="@+id/bannerIV">

            <RadioButton
                android:id="@+id/glideRB"
                style="@style/Widget.LoadingStatus.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/download_using_glide" />

            <RadioButton
                android:id="@+id/loadAppRB"
                style="@style/Widget.LoadingStatus.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textSize="14sp"
                android:text="@string/download_using_loadapp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <RadioButton
                android:id="@+id/retrofitRB"
                style="@style/Widget.LoadingStatus.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/download_using_refrofit"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        </RadioGroup>

        <com.fudex.udacityproject3.ui.progress_button.ProgressButton
            android:id="@+id/progressBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            app:buttonBackgroundColor="?attr/colorPrimaryDark"
            app:buttonDefaultBackgroundColor="?attr/colorPrimary"
            app:buttonDefaultText="Download"
            app:buttonText="We are loading"
            app:buttonTextColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/endGuideline"
            app:layout_constraintStart_toStartOf="@+id/startGuideLine" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>